syntax = "proto3";
package provenance.reward.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";
import "provenance/reward/v1/reward.proto";

option go_package          = "github.com/provenance-io/provenance/x/reward/types";
option java_package        = "io.provenance.reward.v1";
option java_multiple_files = true;

// Query defines the gRPC querier service for reward module.
service Query {

  // returns RewardProgram by id
  rpc RewardProgramByID(RewardProgramByIDRequest) returns (RewardProgramByIDResponse) {
    option (google.api.http).get = "/provenance/rewards/v1/reward_program_by_id/{id}";
  }
  // returns RewardPrograms both upcoming and active
  rpc RewardPrograms(RewardProgramsRequest) returns (RewardProgramsResponse) {
    option (google.api.http).get = "/provenance/rewards/v1/reward_programs";
  }

  // returns all ClaimPeriodRewardDistributionResponse
  rpc ClaimPeriodRewardDistributions(ClaimPeriodRewardDistributionRequest)
      returns (ClaimPeriodRewardDistributionResponse) {
    option (google.api.http).get = "/provenance/rewards/v1/claim_period_reward_distributions";
  }

  // returns a ClaimPeriodRewardDistribution by rewardId and claimPeriodId
  rpc ClaimPeriodRewardDistributionsByID(ClaimPeriodRewardDistributionByIDRequest)
      returns (ClaimPeriodRewardDistributionByIDResponse) {
    option (google.api.http).get =
        "/provenance/rewards/v1/claim_period_reward_distributions/{rewardId}/claimPeriods/{claimPeriodId}";
  }

  // returns a ClaimPeriodRewardDistribution by address
  rpc QueryRewardDistributionsByAddress(RewardAccountByAddressRequest)
      returns (RewardAccountByAddressResponse) {
    option (google.api.http).get =
        "/provenance/rewards/v1/reward_accounts/{address}";
  }
}

message RewardProgramByIDRequest {
  uint64 id = 1;
}

message RewardProgramByIDResponse {
  RewardProgram reward_program = 1;
}

message RewardProgramsRequest {
  enum QueryType {
    ALL         = 0;
    PENDING     = 1;
    ACTIVE      = 2;
    OUTSTANDING = 3;
    FINISHED    = 4;
  }
  QueryType query_type = 1;
}

message RewardAccountResponse {
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = true;

  uint64              reward_program_id = 1; // The id of the reward program that this share belongs to
  string              address           = 2 [(gogoproto.moretags) = "yaml:\"address\""]; // Owner of the share
  cosmos.base.v1beta1.Coin total_reward_claim = 3 [(gogoproto.nullable) = false]; // total rewards claimed for all eligible claim periods in program
  RewardAccountState.ClaimStatus claim_status  = 4; // The status of the claim
}

message RewardProgramsResponse {
  repeated RewardProgram reward_programs = 1 [(gogoproto.nullable) = false];
}

message ClaimPeriodRewardDistributionRequest {}
message ClaimPeriodRewardDistributionResponse {
  repeated ClaimPeriodRewardDistribution claim_period_reward_distribution = 1 [(gogoproto.nullable) = false];
}

message ClaimPeriodRewardDistributionByIDRequest {
  uint64 rewardId      = 1;
  uint64 claimPeriodId = 2;
}


message ClaimPeriodRewardDistributionByIDResponse {
  ClaimPeriodRewardDistribution claim_period_reward_distribution = 1;
}

message RewardAccountByAddressRequest {
  string address    = 1;
}

message RewardAccountByAddressResponse {
  string address    = 1;
  repeated RewardAccountResponse reward_account_state = 2 [(gogoproto.nullable) = false];
}

